--- a/search/index.html
+++ b/search/index.html
@@ -11,8 +11,7 @@
 <meta name="author" content="
 作者:&nbsp;kdjlyy">
 <link rel="canonical" href="https://kdjlyy.github.io/search/">
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<meta name="referrer" content="no-referrer-when-downgrade">
+
 <link crossorigin="anonymous" href="/assets/css/stylesheet.5e03666153f39fa6b9d7b191f3969c92c84cca06291bda5ccd68a124d5d37619.css" integrity="sha256-XgNmYVPzn6a517GR85ackshMygYpG9pczWihJNXTdhk=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.cc9fcead2cb9a9961082d32305fab5e33012cd8a6073034503626c8cb759dadb.js" integrity="sha256-zJ/OrSy5qZYQgtMjBfq14zASzYpgcwNFA2JsjLdZ2ts="></script>
 <link rel="icon" href="https://kdjlyy.github.io/img/logo.ico">
@@ -99,7 +98,9 @@
     
 </body>
 
-</html><meta property="og:title" content="搜索" />
+</html>
+
+<meta property="og:title" content="搜索" />
 <meta property="og:description" content="search" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://kdjlyy.github.io/search/" /><meta property="article:section" content="" />
@@ -256,8 +257,7 @@
             <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
             <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
             
-            <span id="busuanzi_container_site_uv">| 🧑🏻‍💻<span id="busuanzi_value_site_uv"></span>
-                <span id="busuanzi_container_site_pv"> 👀<span id="busuanzi_value_site_pv"></span></span>
+            </span>
     </div>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
