--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <meta name="robots" content="index, follow">
 <title>kdjlyy&#39;s Blog</title>
 
-<meta name="description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod">
+<meta name="description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod, IT">
 <meta name="author" content="
 作者:&nbsp;kdjlyy">
 <link rel="canonical" href="https://kdjlyy.github.io/">
 
-<link crossorigin="anonymous" href="/assets/css/stylesheet.5e03666153f39fa6b9d7b191f3969c92c84cca06291bda5ccd68a124d5d37619.css" integrity="sha256-XgNmYVPzn6a517GR85ackshMygYpG9pczWihJNXTdhk=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.afe857e375223000b97bcca8d7fca2a53ed88ac7bc9eb9f8fd4f72a64caecfc4.css" integrity="sha256-r&#43;hX43UiMAC5e8yo1/yipT7Yise8nrn4/U9ypkyuz8Q=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kdjlyy.github.io/img/logo.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kdjlyy.github.io/img/logo.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="https://kdjlyy.github.io/img/logo.ico">
@@ -103,13 +103,13 @@
 </html>
 
 <meta property="og:title" content="kdjlyy&#39;s Blog" />
-<meta property="og:description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod" />
+<meta property="og:description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod, IT" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://kdjlyy.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="kdjlyy&#39;s Blog"/>
-<meta name="twitter:description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod"/>
+<meta name="twitter:description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod, IT"/>
 
 <script type="application/ld+json">
 {
@@ -117,7 +117,7 @@
   "@type": "Organization",
   "name": "kdjlyy's Blog",
   "url": "https://kdjlyy.github.io",
-  "description": "kdjlyy\u0026#39;s Blog, kdjlyy的个人博客, hugo, PaperMod",
+  "description": "kdjlyy\u0026#39;s Blog, kdjlyy的个人博客, hugo, PaperMod, IT",
   "thumbnailUrl": "https://kdjlyy.github.io/img/logo.ico",
   "sameAs": [
       "https://github.com/kdjlyy", "https://space.bilibili.com/279296780", "img/qq.jpg", "kdjlyy@qq.com"
