--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,7 @@
 作者:&nbsp;kdjlyy">
 <link rel="canonical" href="https://kdjlyy.github.io/search/">
 
-<link crossorigin="anonymous" href="/assets/css/stylesheet.5e03666153f39fa6b9d7b191f3969c92c84cca06291bda5ccd68a124d5d37619.css" integrity="sha256-XgNmYVPzn6a517GR85ackshMygYpG9pczWihJNXTdhk=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.afe857e375223000b97bcca8d7fca2a53ed88ac7bc9eb9f8fd4f72a64caecfc4.css" integrity="sha256-r&#43;hX43UiMAC5e8yo1/yipT7Yise8nrn4/U9ypkyuz8Q=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.cc9fcead2cb9a9961082d32305fab5e33012cd8a6073034503626c8cb759dadb.js" integrity="sha256-zJ/OrSy5qZYQgtMjBfq14zASzYpgcwNFA2JsjLdZ2ts="></script>
 <link rel="icon" href="https://kdjlyy.github.io/img/logo.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kdjlyy.github.io/img/logo.ico">
