--- a/404.html
+++ b/404.html
@@ -10,14 +10,14 @@
 <meta name="description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod, IT">
 <meta name="author" content="
 作者:&nbsp;kdjlyy">
-<link rel="canonical" href="https://kdjlyy.github.io/404.html">
+<link rel="canonical" href="https://kdjlyy.cn/404.html">
 
 <link crossorigin="anonymous" href="/assets/css/stylesheet.afe857e375223000b97bcca8d7fca2a53ed88ac7bc9eb9f8fd4f72a64caecfc4.css" integrity="sha256-r&#43;hX43UiMAC5e8yo1/yipT7Yise8nrn4/U9ypkyuz8Q=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://kdjlyy.github.io/img/logo.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://kdjlyy.github.io/img/logo.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="https://kdjlyy.github.io/img/logo.ico">
-<link rel="apple-touch-icon" href="https://kdjlyy.github.io/logo.ico">
-<link rel="mask-icon" href="https://kdjlyy.github.io/logo.ico">
+<link rel="icon" href="https://kdjlyy.cn/img/logo.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kdjlyy.cn/img/logo.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kdjlyy.cn/img/logo.ico">
+<link rel="apple-touch-icon" href="https://kdjlyy.cn/logo.ico">
+<link rel="mask-icon" href="https://kdjlyy.cn/logo.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -102,7 +102,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="kdjlyy&#39;s Blog, kdjlyy的个人博客, hugo, PaperMod, IT" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://kdjlyy.github.io/404.html" />
+<meta property="og:url" content="https://kdjlyy.cn/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -121,7 +121,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://kdjlyy.github.io" accesskey="h" title="kdjlyy&#39;s Blog (Alt + H)">kdjlyy&#39;s Blog</a>
+            <a href="https://kdjlyy.cn" accesskey="h" title="kdjlyy&#39;s Blog (Alt + H)">kdjlyy&#39;s Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -147,32 +147,32 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://kdjlyy.github.io/search" title="🔍搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://kdjlyy.cn/search" title="🔍搜索 (Alt &#43; /)" accesskey=/>
                     <span>🔍搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://kdjlyy.github.io/" title="🏠主页">
+                <a href="https://kdjlyy.cn/" title="🏠主页">
                     <span class="active">🏠主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://kdjlyy.github.io/posts" title="📚文章">
+                <a href="https://kdjlyy.cn/posts" title="📚文章">
                     <span>📚文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://kdjlyy.github.io/archives" title="⏱️时间轴">
+                <a href="https://kdjlyy.cn/archives" title="⏱️时间轴">
                     <span>⏱️时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://kdjlyy.github.io/tags" title="🔖标签">
+                <a href="https://kdjlyy.cn/tags" title="🔖标签">
                     <span>🔖标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://kdjlyy.github.io/about" title="🙋🏻‍♂️关于">
+                <a href="https://kdjlyy.cn/about" title="🙋🏻‍♂️关于">
                     <span>🙋🏻‍♂️关于</span>
                 </a>
             </li>
@@ -185,11 +185,12 @@
     
 <footer class="footer">
     <div class="busuanzi-footer">
-        <span>&copy; 2023 <a href="https://kdjlyy.github.io">kdjlyy&#39;s Blog</a></span>
+        <span>&copy; 2023 <a href="https://kdjlyy.cn">kdjlyy&#39;s Blog</a></span>
         <span>
             Powered by
             <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
             <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+            | <a href="https://beian.miit.gov.cn/" rel="noopener noreferrer" target="_blank">皖ICP备2023007581号</a>
             
             </span>
     </div>
