--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
                     📋建站
                 </span>
             </a>
-            <a class="button" href="posts/read" rel="noopener" title="📕阅读">
+            <a class="button" href="posts/algorithm" rel="noopener" title="🎈算法">
                 <span class="button-inner">
-                    📕阅读
+                    🎈算法
                 </span>
             </a>
-            <a class="button" href="posts/life" rel="noopener" title="🏖生活">
+            <a class="button" href="posts/tools" rel="noopener" title="⚙️工具">
                 <span class="button-inner">
-                    🏖生活
+                    ⚙️工具
                 </span>
             </a>
         </div>
